--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -83,162 +83,7 @@
             android:orientation="vertical">
 
             <!-- Horizontal Scrollable Categories -->
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <HorizontalScrollView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="10sp"
-                    android:scrollbars="none">
-
-                    <LinearLayout
-                        android:id="@+id/ll_categories"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <!-- multiple categories -->
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginEnd="10sp"
-                            android:orientation="vertical">
-
-                            <ImageView
-                                android:layout_width="80sp"
-                                android:layout_height="80sp"
-                                android:background="@drawable/rounded_corner"
-                                android:src="@drawable/resturant_icon" />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:fontFamily="@font/swiggy_font_medium"
-                                android:paddingTop="5sp"
-                                android:text="Restaurant"
-                                android:textStyle="bold" />
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginEnd="10sp"
-                            android:orientation="vertical">
-
-                            <ImageView
-                                android:layout_width="80sp"
-                                android:layout_height="80sp"
-                                android:background="@drawable/rounded_corner"
-                                android:src="@drawable/bank_icon" />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:fontFamily="@font/swiggy_font_medium"
-                                android:paddingTop="5sp"
-                                android:text="Bank"
-                                android:textStyle="bold" />
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginEnd="10sp"
-                            android:orientation="vertical">
-
-                            <ImageView
-                                android:layout_width="80sp"
-                                android:layout_height="80sp"
-                                android:background="@drawable/rounded_corner"
-                                android:src="@drawable/atm_icon" />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:fontFamily="@font/swiggy_font_medium"
-                                android:paddingTop="5sp"
-                                android:text="ATM"
-                                android:textStyle="bold" />
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginEnd="10sp"
-                            android:orientation="vertical">
-
-                            <ImageView
-                                android:layout_width="80sp"
-                                android:layout_height="80sp"
-                                android:background="@drawable/rounded_corner"
-                                android:src="@drawable/hospital_icon" />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:fontFamily="@font/swiggy_font_medium"
-                                android:paddingTop="5sp"
-                                android:text="Hospital"
-                                android:textStyle="bold" />
-
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginEnd="10sp"
-                            android:orientation="vertical">
-
-                            <ImageView
-                                android:layout_width="80sp"
-                                android:layout_height="80sp"
-                                android:background="@drawable/rounded_corner"
-                                android:src="@drawable/groceries_icon" />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:fontFamily="@font/swiggy_font_medium"
-                                android:paddingTop="5sp"
-                                android:text="Groceries"
-                                android:textStyle="bold" />
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginEnd="10sp"
-                            android:orientation="vertical">
-
-                            <ImageView
-                                android:layout_width="80sp"
-                                android:layout_height="80sp"
-                                android:background="@drawable/rounded_corner"
-                                android:src="@drawable/parking_icon" />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:fontFamily="@font/swiggy_font_medium"
-                                android:paddingTop="5sp"
-                                android:text="Parking"
-                                android:textStyle="bold" />
-                        </LinearLayout>
-
-                    </LinearLayout>
-
-                </HorizontalScrollView>
-
-
-            </RelativeLayout>
+            <include layout="@layout/layout_quickcategoriesplaces" />
 
             <!--   offers (dynamically added) -->
             <LinearLayout
